# IRelectra

./: .travis.yml  CMakeLists.txt  IRelectra.cpp  IRelectra.h  README.md
tests/: IRElectraTest.cpp  IRremote.h  TestHarness.cpp  application.h
